# utils

./: .gitignore  README.md  pyproject.toml
jecr/: __main__.py
jecr/utils/: _NonEmptyFolderError.py  _Project.py  _Resource.py  __init__.py  create_project.py
jecr/utils/resources/: README.md  pyproject.toml
tests/utils/: test_create_project.py
