[project]
name = "jecr"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

authors = [
  {name = "J.E", email = "enrique.1663@gmail.com"},
]

[project.scripts]
cli-name = "jecr"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
# extend-select = ["E501"]
# select = [
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # flake8-bugbear
#     "B",
#     # flake8-simplify
#     "SIM",
#     # isort
#     "I",
# ]